<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <!-- Define any variables if needed -->
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="?attr/colorSurface">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/shabnam"
            android:text="@string/batteryOpL"
            android:textColor="?attr/colorOnSurface"
            android:textSize="20sp"
            android:textStyle="bold"
            android:focusable="true" />

        <TextView
            android:id="@+id/dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/shabnam"
            android:text="@string/dialBtText"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="16sp"
            android:focusable="true" />

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:weightSum="2"
            android:gravity="end"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_button_negative"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:text="@string/cancel"
                android:textColor="?attr/colorOnSurface"
                android:focusable="true" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_button_positive"
                style="@style/Widget.Material3.Button"
                android:layout_width="0dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:backgroundTint="?attr/colorPrimary"
                android:text="@string/goToSettings"
                android:textColor="?attr/colorOnPrimary"
                android:focusable="true" />
        </LinearLayout>

    </LinearLayout>
</layout>
