<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:background="@drawable/rounded_bottom_sheet">

  <LinearLayout
      android:background="?attr/colorSurface"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="vertical">

    <View
        android:id="@+id/dividingCloser"
        android:layout_width="64sp"
        android:layout_height="5dp"
        android:layout_marginTop="8sp"
        android:background="@drawable/bottom_sheet_closer" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:fontFamily="@font/shabnam"
        android:text="@string/editSheetEndpoint"
        android:textColor="?attr/colorOnSurface"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.FilledBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:layout_marginTop="12sp"
        android:hint="@string/content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:fontFamily="@font/shabnam"
            android:lineSpacingExtra="4sp"
            android:padding="12sp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSurface"
            android:textSize="15sp"
            android:nextFocusDown="@+id/cancelButton" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16sp"
        android:layout_marginVertical="12sp"
        android:orientation="horizontal">

      <com.google.android.material.button.MaterialButton
          android:id="@+id/cancelButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8sp"
          android:layout_weight="1"
          style="@style/Widget.Material3.Button.OutlinedButton"
          android:text="@string/cancel"
          android:textColor="?attr/colorOnSurface"
          android:textSize="17sp"
          android:focusable="true"
          android:nextFocusRight="@+id/applyButton"
          android:nextFocusUp="@+id/edittext" />

      <com.google.android.material.button.MaterialButton
          android:id="@+id/applyButton"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="8sp"
          android:layout_weight="1"
          style="@style/Widget.Material3.Button"
          android:text="@string/update"
          app:backgroundTint="?attr/colorPrimary"
          android:textColor="?attr/colorOnPrimary"
          android:textSize="17sp"
          android:focusable="true"
          android:nextFocusLeft="@+id/cancelButton"
          android:nextFocusUp="@+id/edittext" />

    </LinearLayout>
  </LinearLayout>
</ScrollView>
